--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
 PORT=
+
+# MySQL Root Password (for admin purposes)
+MYSQL_ROOT_PASSWORD=
+
+# Application-specific database, user, and password
+MYSQL_DATABASE=
+MYSQL_USER=
+MYSQL_PASSWORD=
