--- a/package.json
+++ b/package.json
@@ -16,17 +16,21 @@
     "coverage": "vitest run --coverage",
     "type-check": "tsc --noEmit",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "docker-u": "docker compose --file src/infra/compose.yaml --env-file .env up",
+    "docker-d": "docker compose --file src/infra/compose.yaml down"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
     "@types/express": "^5.0.3",
+    "@types/mysql": "^2.15.27",
     "@types/node": "^24.0.7",
     "@vitest/coverage-v8": "^3.2.4",
     "tsx": "^4.20.3",
