--- a/package.json
+++ b/package.json
@@ -7,32 +7,46 @@
     "#*": "./src/*"
   },
   "scripts": {
-    "dev": "tsx --watch --env-file .env src/index.ts",
     "start": "node --env-file .env dist/index.js",
-    "build": "tsc -p tsconfig.build.json",
-    "test": "vitest",
+    "dev": "npm run services:up && npm run services:wait:database && npm run mgirations:up && tsx --watch --env-file .env src/index.ts",
+    "test": "npm run services:up && npm run && concurrently --names node-server,vitest --hide node-server --kill-others --success command-vitest  \"npm run server:test\" \"vitest --reporter verbose\"",
+    "posttest": "npm run services:stop",
     "test:run": "vitest --run",
+    "test:watch": "vitest --reporter verbose",
     "test:ui": "vitest --ui",
     "coverage": "vitest run --coverage",
-    "type-check": "tsc --noEmit",
+    "build": "tsc -p tsconfig.build.json",
+    "server:test": "tsx --env-file .env src/index.ts",
+    "services:up": "docker compose --file src/infra/compose.yaml --env-file .env up -d",
+    "services:stop": "docker compose --file src/infra/compose.yaml stop",
+    "services:down": "docker compose --file src/infra/compose.yaml down",
+    "services:wait:database": "node src/infra/scripts/wait-for-mysql.js",
+    "mgirations:create": "db-migrate --migrations-dir src/infra/migrations create",
+    "mgirations:up": "db-migrate --migrations-dir src/infra/migrations up",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "docker-u": "docker compose --file src/infra/compose.yaml --env-file .env up",
-    "docker-d": "docker compose --file src/infra/compose.yaml down"
+    "type-check": "tsc --noEmit"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async-retry": "^1.3.3",
     "express": "^5.1.0",
-    "mysql": "^2.18.1"
+    "mysql2": "^3.14.1",
+    "next-connect": "^1.0.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
+    "@types/async-retry": "^1.4.9",
     "@types/express": "^5.0.3",
     "@types/mysql": "^2.15.27",
     "@types/node": "^24.0.7",
     "@vitest/coverage-v8": "^3.2.4",
+    "concurrently": "^9.2.0",
+    "db-migrate": "^0.11.14",
+    "db-migrate-mysql": "^3.0.0",
+    "dotenv-cli": "^8.0.0",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "vitest": "^3.2.4"
