infra: add `compose.yaml` to configure mysql in docker and add test migration file and connection to database

--- a/src/infra/compose.yaml
+++ b/src/infra/compose.yaml
@@ -1,11 +1,12 @@
 services:
   database:
+    container_name: "mysql-dev"
     image: "mysql:9.3.0"
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_DATABASE: my_db
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
     ports:
       - "3306:3306"
     volumes:
