feat: add `status.controller.ts` to manage backend health

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
-PORT=
+PORT=3000
 
-# MySQL Root Password (for admin purposes)
-MYSQL_ROOT_PASSWORD=
+# MySQL container environment variables for local development
+MYSQL_DATABASE=my_db
+MYSQL_USER=dbuser
+MYSQL_PASSWORD=s3kreee7
 
-# Application-specific database, user, and password
-MYSQL_DATABASE=
-MYSQL_USER=
-MYSQL_PASSWORD=
+# Application connection settings
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
